fix alignment

--- a/appcompose/home/home.css
+++ b/appcompose/home/home.css
@@ -79,6 +79,7 @@
 }
 
 #main {
+    margin-right: 0px;
     max-width: 290px;
     overflow: hidden;
     padding: 3px;
